--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "react-native-easy-markdown",
-    "version": "2.0.0",
+    "version": "2.1.0",
     "description": "Simple & customizable React Native component to render Github-flavoured markdown using minimal native components.",
     "main": "lib/index.js",
-    "repository": "https://github.com/TitanInvest/react-native-easy-markdown",
+    "repository": "https://github.com/makara-digital/react-native-easy-markdown",
     "scripts": {
         "build": "babel index.js styles.js Utils.js -d lib",
         "prepare": "npm run build",
@@ -18,11 +18,12 @@
     ],
     "contributors": [
         "Juuso Lappalainen",
-        "Zach Ivester <zach@titanvest.com>"
+        "Zach Ivester <zach@titanvest.com>",
+        "Jesse Proudman <jesse@makaradigital.com>"
     ],
     "license": "MIT",
     "dependencies": {
-        "simple-markdown": "^0.7.2"
+        "simple-markdown": "^0.7.3"
     },
     "peerDependencies": {
         "react-native": "*"
