--- a/package.json
+++ b/package.json
@@ -1,35 +1,46 @@
 {
-    "name": "react-native-easy-markdown",
-    "version": "2.1.0",
-    "description": "Simple & customizable React Native component to render Github-flavoured markdown using minimal native components.",
-    "main": "lib/index.js",
-    "repository": "https://github.com/makara-digital/react-native-easy-markdown",
-    "scripts": {
-        "build": "babel index.js styles.js Utils.js -d lib",
-        "prepare": "npm run build",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [
-        "react-native",
-        "native",
-        "markdown",
-        "parse",
-        "parser"
-    ],
-    "contributors": [
-        "Juuso Lappalainen",
-        "Zach Ivester <zach@titanvest.com>",
-        "Jesse Proudman <jesse@makaradigital.com>"
-    ],
-    "license": "MIT",
-    "dependencies": {
-        "simple-markdown": "^0.7.3"
-    },
-    "peerDependencies": {
-        "react-native": "*"
-    },
-    "devDependencies": {
-        "babel-cli": "^6.26.0",
-        "babel-preset-react-native": "^4.0.1"
-    }
+  "name": "@makaradigital/react-native-easy-markdown",
+  "version": "2.1.1",
+  "description": "Simple & customizable React Native component to render Github-flavoured markdown using minimal native components.",
+  "main": "lib/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/makara-digital/react-native-easy-markdown.git"
+  },
+  "scripts": {
+    "build": "babel index.js styles.js Utils.js -d lib",
+    "prepare": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "react-native",
+    "native",
+    "markdown",
+    "parse",
+    "parser"
+  ],
+  "contributors": [
+    "Juuso Lappalainen",
+    "Zach Ivester <zach@titanvest.com>",
+    "Jesse Proudman <jesse@makaradigital.com>"
+  ],
+  "license": "MIT",
+  "dependencies": {
+    "simple-markdown": "^0.7.3"
+  },
+  "peerDependencies": {
+    "react-native": "*"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-native": "^4.0.1"
+  },
+  "bugs": {
+    "url": "https://github.com/makara-digital/react-native-easy-markdown/issues"
+  },
+  "homepage": "https://github.com/makara-digital/react-native-easy-markdown#readme",
+  "directories": {
+    "lib": "lib"
+  },
+  "author": ""
 }
